correct getApplicationSSSS
